--- a/Unit_1_Basic_SQL.ipynb
+++ b/Unit_1_Basic_SQL.ipynb
@@ -6,7 +6,7 @@
       "name": "Unit_1 Basic SQL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMt128cZ1f9rNDfLMwdQ7Oc",
+      "authorship_tag": "ABX9TyOQijDh7i5e2RfQtJh0efw1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
       "metadata": {
         "id": "N5R4p7i7ggyw"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "xu4mBSeMYjSY"
       },
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -84,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SFu3QpfZbpmD",
-        "outputId": "5e6d5db5-6f6f-45d8-d8c1-c1110c4b16a5"
+        "outputId": "5bdcfb26-83fb-4447-b9f2-9ad1d39725d6"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,9 +143,9 @@
           "height": 520
         },
         "id": "sD0BG6KxYqUQ",
-        "outputId": "7671ca0e-ba90-4fe7-ff5a-eb49697eeb9d"
+        "outputId": "f96b5866-7e2a-4525-d889-44c74562c37e"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +170,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5d35c4d1-a43e-4d32-8a2d-152ba0ebd2b2\">\n",
+              "  <div id=\"df-fa4e925a-d483-452c-8697-574e2b450f83\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -289,7 +289,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5d35c4d1-a43e-4d32-8a2d-152ba0ebd2b2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fa4e925a-d483-452c-8697-574e2b450f83')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -340,12 +340,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5d35c4d1-a43e-4d32-8a2d-152ba0ebd2b2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-fa4e925a-d483-452c-8697-574e2b450f83 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5d35c4d1-a43e-4d32-8a2d-152ba0ebd2b2');\n",
+              "          const element = document.querySelector('#df-fa4e925a-d483-452c-8697-574e2b450f83');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -368,17 +368,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# **L_3:** ORDER BY & ORDER BY X DESC\n",
-        "**ORDER BY:** Used to arrange the outputs ascendingly according to column X\n",
+        "# **L_3:** ORDER BY & ORDER BY column_X DESC\n",
+        "**ORDER BY:** Used to arrange outputs ascendingly according to column X\n",
         "\n",
-        "**ORDER BY X DESC:** Used to arrange the outputs descendingly according to column X\n",
+        "**ORDER BY column_X DESC:** Used to arrange outputs descendingly according to column X\n",
         "\n"
       ],
       "metadata": {
@@ -404,10 +404,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b7d1bf53-e440-4c28-a74a-f332da800da0",
+        "outputId": "c07cea78-3a0f-4553-bf81-15754ed727c1",
         "id": "WFKqcgFRfAMj"
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,8 +433,8 @@
         "SQL_code = '''\n",
         "SELECT id, occurred_at, total_amt_usd\n",
         "FROM orders \n",
-        "ORDER BY occurred_at DESC\n",
-        "LIMIT 10\n",
+        "ORDER BY total_amt_usd DESC\n",
+        "LIMIT 5\n",
         "'''\n",
         "\n",
         "code_execution = db.execute(SQL_code)\n",
@@ -447,24 +447,57 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "03kQ9ZAUgIQD",
-        "outputId": "cc42a290-40be-4966-f91d-f0485dec461f"
+        "outputId": "fc5d6e58-6871-46a2-a23b-94e4f699492a"
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(6451, '2017-01-02 00:02:40', 6451.76)\n",
-            "(3546, '2017-01-01 23:50:16', 1932.85)\n",
-            "(6454, '2017-01-01 22:29:50', 1854.57)\n",
-            "(3554, '2017-01-01 22:17:26', 2666.79)\n",
-            "(6556, '2017-01-01 21:04:25', 892.85)\n",
-            "(3745, '2017-01-01 20:52:23', 2582.4)\n",
-            "(1092, '2017-01-01 17:34:10', 1525.98)\n",
-            "(1364, '2017-01-01 16:40:57', 1036.57)\n",
-            "(3159, '2017-01-01 14:05:39', 1870.35)\n",
-            "(6223, '2017-01-01 13:57:21', 4676.25)\n"
+            "(4016, '2016-12-26 08:53:24', 232207.07)\n",
+            "(3892, '2016-06-24 13:32:55', 112875.18)\n",
+            "(3963, '2015-03-30 00:05:30', 107533.55)\n",
+            "(5791, '2014-10-24 12:06:22', 95005.82)\n",
+            "(3778, '2016-07-17 14:50:43', 93547.84)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# we can order by more than 1 column with respect to there order in the ORDER BY query\n",
+        "SQL_code = '''\n",
+        "SELECT id, account_id, total_amt_usd\n",
+        "FROM orders \n",
+        "ORDER BY account_id, total_amt_usd DESC\n",
+        "LIMIT 5\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "afd6f39c-a63b-40b6-c649-c88435f44df4",
+        "id": "Zn0mhRfumswU"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4308, 1001, 9426.71)\n",
+            "(4309, 1001, 9230.67)\n",
+            "(4316, 1001, 9134.31)\n",
+            "(4317, 1001, 8963.91)\n",
+            "(4314, 1001, 8863.24)\n"
           ]
         }
       ]
