--- a/Unit_1_Basic_SQL.ipynb
+++ b/Unit_1_Basic_SQL.ipynb
@@ -6,7 +6,7 @@
       "name": "Unit_1 Basic SQL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOQijDh7i5e2RfQtJh0efw1",
+      "authorship_tag": "ABX9TyNIuME6YtwF0y+qInH1cDle",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -447,9 +447,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "03kQ9ZAUgIQD",
-        "outputId": "fc5d6e58-6871-46a2-a23b-94e4f699492a"
+        "outputId": "ff2f1085-94c9-4c1c-9f6f-538f4717ad0a"
       },
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,6 +498,137 @@
             "(4316, 1001, 9134.31)\n",
             "(4317, 1001, 8963.91)\n",
             "(4314, 1001, 8863.24)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **L_4:** WHERE\n",
+        "Used to extract only those rows that fulfill a specified condition\n",
+        "\n",
+        ".> (greater than), < (less than), >= (greater than or equal to), <= (less than or equal to), = (equal to), != (not equal to)"
+      ],
+      "metadata": {
+        "id": "MLSsfvrpn5Dp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT *\n",
+        "FROM orders \n",
+        "WHERE gloss_amt_usd >= 1000\n",
+        "LIMIT 5\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7d0dd058-677c-4fde-cffe-5c08e3920a82",
+        "id": "l393Qhv7n5Dz"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(14, 1001, '2016-10-26 20:31:30', 97, 143, 54, 294, 484.03, 1071.07, 438.48, 1993.58)\n",
+            "(62, 1091, '2014-10-13 12:12:55', 146, 196, 3, 345, 728.54, 1468.04, 24.36, 2220.94)\n",
+            "(88, 1101, '2015-06-24 13:08:15', 182, 339, 17, 538, 908.18, 2539.11, 138.04, 3585.33)\n",
+            "(121, 1131, '2016-08-10 23:47:41', 273, 134, 0, 407, 1362.27, 1003.66, 0, 2365.93)\n",
+            "(129, 1141, '2016-12-21 15:52:58', 143, 1045, 2157, 3345, 713.57, 7827.05, 17514.84, 26055.46)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT name, website, primary_poc\n",
+        "FROM accounts \n",
+        "WHERE name = 'Exxon Mobil'\n",
+        "'''\n",
+        "# strings must be placed in single quotes ( ' ) NOT double quotes ( \" )\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "id": "DrbcJA5vqLmB",
+        "outputId": "1f40d575-6bb6-4f3c-a6fe-816392448112",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Exxon Mobil', 'www.exxonmobil.com', 'Sung Shields')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **L_5:** WHERE\n",
+        "Used to extract only those rows that fulfill a specified condition\n",
+        "\n",
+        ".> (greater than), < (less than), >= (greater than or equal to), <= (less than or equal to), = (equal to), != (not equal to)"
+      ],
+      "metadata": {
+        "id": "wugAHuDqpoGu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT *\n",
+        "FROM orders \n",
+        "WHERE gloss_amt_usd >= 1000\n",
+        "LIMIT 5\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7d0dd058-677c-4fde-cffe-5c08e3920a82",
+        "id": "OULNeOUDpoG3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(14, 1001, '2016-10-26 20:31:30', 97, 143, 54, 294, 484.03, 1071.07, 438.48, 1993.58)\n",
+            "(62, 1091, '2014-10-13 12:12:55', 146, 196, 3, 345, 728.54, 1468.04, 24.36, 2220.94)\n",
+            "(88, 1101, '2015-06-24 13:08:15', 182, 339, 17, 538, 908.18, 2539.11, 138.04, 3585.33)\n",
+            "(121, 1131, '2016-08-10 23:47:41', 273, 134, 0, 407, 1362.27, 1003.66, 0, 2365.93)\n",
+            "(129, 1141, '2016-12-21 15:52:58', 143, 1045, 2157, 3345, 713.57, 7827.05, 17514.84, 26055.46)\n"
           ]
         }
       ]
