--- a/Unit_1_Basic_SQL.ipynb
+++ b/Unit_1_Basic_SQL.ipynb
@@ -6,7 +6,7 @@
       "name": "Unit_1 Basic SQL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfnrpYzw7DBfGeyoJtRGDW",
+      "authorship_tag": "ABX9TyNsz9nEQcCWIQe/a9/zyOFc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -587,7 +587,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **L_5:** Arithmetic Operations\n",
+        "# **L_5:** Arithmetic Operations (+, -, *, / )\n",
         "Creat a new column that is a combination of existing columns"
       ],
       "metadata": {
@@ -1053,7 +1053,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **L_4:** LIKE\n",
+        "# **L_6:** LIKE\n",
         "\n",
         "It's used in a WHERE clause to search for a specified pattern in a column.\n",
         "\n",
