--- a/Unit_1_Basic_SQL.ipynb
+++ b/Unit_1_Basic_SQL.ipynb
@@ -6,7 +6,7 @@
       "name": "Unit_1 Basic SQL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNsz9nEQcCWIQe/a9/zyOFc",
+      "authorship_tag": "ABX9TyOKqWQsRMbXVHST3/M6I45C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1053,13 +1053,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **L_6:** LIKE\n",
+        "# **L_6:** LIKE & NOT LIKE\n",
         "\n",
-        "It's used in a WHERE clause to search for a specified pattern in a column.\n",
+        "**LIKE:** Used in a WHERE clause to search for a specified pattern in a column.\n",
+        "\n",
+        "**NOT LIKE:** Used in a WHERE clause to avoid a specified pattern in a column.\n",
         "\n",
         "There are two wildcards often used in conjunction with the LIKE operator:\n",
         "\n",
         " The percent sign (%) represents any number of characters\n",
+        "\n",
         " The underscore sign (_) represents one, single character\n"
       ],
       "metadata": {
@@ -1175,6 +1178,213 @@
             "(\"Lowe's\",)\n",
             "('UPS',)\n",
             "('Cisco Systems',)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT name\n",
+        "FROM accounts \n",
+        "WHERE name NOT LIKE '%one%'\n",
+        "LIMIT 5\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a993a0b3-e517-4662-949c-028569b6c48a",
+        "id": "xfEH3kWa5G0S"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Walmart',)\n",
+            "('Exxon Mobil',)\n",
+            "('Apple',)\n",
+            "('Berkshire Hathaway',)\n",
+            "('McKesson',)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **L_7:** IN & NOT IN\n",
+        "\n",
+        "**IN:** Used to specify multiple values in a WHERE clause.\n",
+        "\n",
+        "**NOT IN:** Used to avoid multiple values in a WHERE clause.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XuZkCfJk38mc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT name, primary_poc, sales_rep_id\n",
+        "FROM accounts\n",
+        "WHERE name IN ('Walmart', 'Target', 'Nordstrom')\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d42ba470-e900-4b6c-b5f3-30bac09c6b82",
+        "id": "HpJcTGpy38md"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Walmart', 'Tamara Tuma', 321500)\n",
+            "('Target', 'Luba Streett', 321660)\n",
+            "('Nordstrom', 'Yan Crater', 321820)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT name, primary_poc, sales_rep_id\n",
+        "FROM accounts\n",
+        "WHERE name NOT IN ('Walmart', 'Target', 'Nordstrom')\n",
+        "LIMIT 5\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89f03c51-5fc1-4558-a539-599babe58b94",
+        "id": "gG2DP8sC5arB"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Exxon Mobil', 'Sung Shields', 321510)\n",
+            "('Apple', 'Jodee Lupo', 321520)\n",
+            "('Berkshire Hathaway', 'Serafina Banda', 321530)\n",
+            "('McKesson', 'Angeles Crusoe', 321540)\n",
+            "('UnitedHealth Group', 'Savanna Gayman', 321550)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **L_8:** AND & BETWEEN\n",
+        "\n",
+        "**AND:** Shows the row if all the conditions separated by AND are TRUE\n",
+        "\n",
+        "**BETWEEN:** elects values within a given range. The values can be numbers, text, or dates\n",
+        "\n",
+        "$NOTE:$ BETWEEN operator included the begin and end values"
+      ],
+      "metadata": {
+        "id": "2A5iZE6y6Lmv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT id, standard_qty, poster_qty, gloss_qty\n",
+        "FROM orders \n",
+        "WHERE standard_qty > 1000 AND poster_qty = 0 AND gloss_qty = 0\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3da41aed-f4e8-493e-ec7b-87cacc4f953d",
+        "id": "LVPyxfO06Lmv"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(2613, 1171, 0, 0)\n",
+            "(3260, 1552, 0, 0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT occurred_at, gloss_qty\n",
+        "FROM orders   \n",
+        "WHERE gloss_qty BETWEEN 24 AND 29\n",
+        "LIMIT 5\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fb645ec5-8683-440a-e773-ad9577de1264",
+        "id": "2_hno99q6Lmv"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('2016-02-01 19:27:27', 29)\n",
+            "('2016-03-02 15:29:32', 24)\n",
+            "('2016-10-14 23:54:21', 28)\n",
+            "('2015-08-09 18:29:20', 24)\n",
+            "('2016-02-01 20:00:37', 26)\n"
           ]
         }
       ]
