--- a/Unit_1_Basic_SQL.ipynb
+++ b/Unit_1_Basic_SQL.ipynb
@@ -6,7 +6,7 @@
       "name": "Unit_1 Basic SQL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOKqWQsRMbXVHST3/M6I45C",
+      "authorship_tag": "ABX9TyPk+K0D20kEkdeJ/lYQlXqv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1385,6 +1385,92 @@
             "('2016-10-14 23:54:21', 28)\n",
             "('2015-08-09 18:29:20', 24)\n",
             "('2016-02-01 20:00:37', 26)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT *\n",
+        "FROM web_events    \n",
+        "WHERE channel IN ('organic','adwords') AND occurred_at BETWEEN '2016-01-01' AND '2016-12-30'\n",
+        "ORDER BY occurred_at \n",
+        "LIMIT 10\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a0ea1f8d-ee50-4b81-b16b-552b512c44e0",
+        "id": "2PaTGGJe_HBv"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4399, 1001, '2016-01-01 15:45:54', 'adwords')\n",
+            "(5581, 1831, '2016-01-02 21:27:39', 'organic')\n",
+            "(8775, 4281, '2016-01-04 22:51:01', 'adwords')\n",
+            "(6567, 2541, '2016-01-06 00:15:28', 'organic')\n",
+            "(7846, 3471, '2016-01-06 08:23:05', 'adwords')\n",
+            "(5641, 1851, '2016-01-06 13:37:28', 'adwords')\n",
+            "(6307, 2351, '2016-01-08 07:35:24', 'adwords')\n",
+            "(8372, 4031, '2016-01-08 11:04:04', 'adwords')\n",
+            "(7787, 3421, '2016-01-09 09:37:19', 'organic')\n",
+            "(8753, 4241, '2016-01-09 16:20:50', 'organic')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT *\n",
+        "FROM web_events    \n",
+        "WHERE (channel = 'organic' OR channel = 'adwords') AND occurred_at BETWEEN '2016-01-01' AND '2016-12-30'\n",
+        "ORDER BY occurred_at \n",
+        "LIMIT 10\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "032be990-e7b7-46bc-da82-964f1d99c753",
+        "id": "By54OseR_oMF"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4399, 1001, '2016-01-01 15:45:54', 'adwords')\n",
+            "(5581, 1831, '2016-01-02 21:27:39', 'organic')\n",
+            "(8775, 4281, '2016-01-04 22:51:01', 'adwords')\n",
+            "(6567, 2541, '2016-01-06 00:15:28', 'organic')\n",
+            "(7846, 3471, '2016-01-06 08:23:05', 'adwords')\n",
+            "(5641, 1851, '2016-01-06 13:37:28', 'adwords')\n",
+            "(6307, 2351, '2016-01-08 07:35:24', 'adwords')\n",
+            "(8372, 4031, '2016-01-08 11:04:04', 'adwords')\n",
+            "(7787, 3421, '2016-01-09 09:37:19', 'organic')\n",
+            "(8753, 4241, '2016-01-09 16:20:50', 'organic')\n"
           ]
         }
       ]
