--- a/Unit_1_Basic_SQL.ipynb
+++ b/Unit_1_Basic_SQL.ipynb
@@ -6,7 +6,7 @@
       "name": "Unit_1 Basic SQL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPk+K0D20kEkdeJ/lYQlXqv",
+      "authorship_tag": "ABX9TyMYGci3bXjm4aSir/cdbNYH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1471,6 +1471,50 @@
             "(8372, 4031, '2016-01-08 11:04:04', 'adwords')\n",
             "(7787, 3421, '2016-01-09 09:37:19', 'organic')\n",
             "(8753, 4241, '2016-01-09 16:20:50', 'organic')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **L_9:** OR\n",
+        "\n",
+        "Shows the row if any of the conditions separated by it is TRUE\n"
+      ],
+      "metadata": {
+        "id": "1ViIt3_a_9tN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT name, primary_poc\n",
+        "FROM accounts\n",
+        "WHERE ( name LIKE 'C%' OR name LIKE 'W%' ) AND (primary_poc LIKE '%ana%' OR primary_poc LIKE 'Ana%') AND primary_poc NOT LIKE '%eana%'\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c6a2e64f-eb84-4d83-bf4c-0864b121ca05",
+        "id": "oqup4FIV_9tO"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('CVS Health', 'Anabel Haskell')\n",
+            "('Comcast', 'Shana Sanborn')\n"
           ]
         }
       ]
