--- a/Unit_2_SQL_Joins_.ipynb
+++ b/Unit_2_SQL_Joins_.ipynb
@@ -6,7 +6,7 @@
       "name": "Unit_2_SQL_Joins .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNqFX0OyHnfC1XleFVqr2hn",
+      "authorship_tag": "ABX9TyMVKiFO14HpKnncksaIM6Xu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,7 +210,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Create a small database to make this example clear "
+        "**Let's create a small database to make this example clear**"
       ],
       "metadata": {
         "id": "rF0Jhh5zzuIZ"
