--- a/Unit_2_SQL_Joins_.ipynb
+++ b/Unit_2_SQL_Joins_.ipynb
@@ -6,7 +6,7 @@
       "name": "Unit_2_SQL_Joins .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMVKiFO14HpKnncksaIM6Xu",
+      "authorship_tag": "ABX9TyMGVUm5x9rkKCWpuHvgHL8C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -238,30 +238,33 @@
         "                      played_matches integer);''')\n",
         "\n",
         "temp_database.execute(\"INSERT INTO season VALUES('Real Madrid', 2019, 52);\")\n",
-        "temp_database.execute(\"INSERT INTO season VALUES('Real Madrid', 2018, 49);\")\n",
         "temp_database.execute(\"INSERT INTO season VALUES('Barcelona', 2019, 47);\")\n",
-        "temp_database.execute(\"INSERT INTO season VALUES('Barcelona', 2018, 45);\")\n",
+        "temp_database.execute(\"INSERT INTO season VALUES('Paris St Germain', 2018, 45);\")\n",
         "temp_database.execute(\"INSERT INTO season VALUES('Tottenham', 2019, 52);\")\n",
-        "temp_database.execute(\"INSERT INTO season VALUES('Bayern Leverkusen', 2018, 50 );\")"
+        "temp_database.execute(\"INSERT INTO season VALUES('Bayern Leverkusen', 2018, 50 );\")\n",
+        "\n",
+        "# This is a DataBase of fiction ^^. Unless otherwise indicated, all the names, characters, businesses, places, \n",
+        "# events and incidents in this book are either the product of the author's imagination or used in a fictitious manner. \n",
+        "# Any resemblance to actual persons, living or dead, or actual events is purely coincidental."
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "A27NaI2H067H",
-        "outputId": "4f541811-a6ba-4a52-ee15-fb9deca2ffea"
+        "outputId": "21044e13-481f-4147-c061-d86a42f7748b"
       },
-      "execution_count": 18,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<sqlite3.Cursor at 0x7fe8eeffc730>"
+              "<sqlite3.Cursor at 0x7fe8ef000880>"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 22
         }
       ]
     },
@@ -283,18 +286,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5a76f999-a0ed-40c7-a6bd-c0346f636cd6",
+        "outputId": "2b779dd5-1b2b-4a54-b9d4-3e8e1fbd1db0",
         "id": "WlRjl1r_wBtm"
       },
-      "execution_count": 19,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "('Real Madrid', 'Spain', 'Real Madrid', 2018, 49)\n",
             "('Real Madrid', 'Spain', 'Real Madrid', 2019, 52)\n",
-            "('Barcelona', 'Spain', 'Barcelona', 2018, 45)\n",
             "('Barcelona', 'Spain', 'Barcelona', 2019, 47)\n",
             "('Liverpool', 'UK', None, None, None)\n",
             "('Manchester city', 'UK', None, None, None)\n",
@@ -307,7 +308,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Returned rows that contain Liverpool and Manchester city despite that they have no link to the season table"
+        "Returned rows that contain **Liverpool**, **Manchester city**, **Bayern Munich**, and **Arsenal** despite that they have no link to the season table"
       ],
       "metadata": {
         "id": "HyAcXvjw6SAm"
@@ -331,19 +332,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2fb955c6-1ec7-4e79-fa7e-e20f8775be81",
+        "outputId": "58beaf27-8d6c-4dfa-cbbb-739b70f5f6ee",
         "id": "KPoRUQHN688B"
       },
-      "execution_count": 20,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "('Real Madrid', 2019, 52, 'Real Madrid', 'Spain')\n",
-            "('Real Madrid', 2018, 49, 'Real Madrid', 'Spain')\n",
             "('Barcelona', 2019, 47, 'Barcelona', 'Spain')\n",
-            "('Barcelona', 2018, 45, 'Barcelona', 'Spain')\n",
+            "('Paris St Germain', 2018, 45, None, None)\n",
             "('Tottenham', 2019, 52, None, None)\n",
             "('Bayern Leverkusen', 2018, 50, None, None)\n"
           ]
@@ -353,7 +353,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Returned rows that contain Tottenham and Bayern Leverkusen despite that they have no link to the team table"
+        "Returned rows that contain **Paris St Germain**, **Tottenham** and **Bayern Leverkusen** despite that they have no link to the team table"
       ],
       "metadata": {
         "id": "q5o41tL87EUc"
