--- a/Unit_3_SQL_Aggregations_.ipynb
+++ b/Unit_3_SQL_Aggregations_.ipynb
@@ -6,7 +6,7 @@
       "name": "Unit_3_SQL Aggregations .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPLKEYRqz6u+scpXjTCYFav",
+      "authorship_tag": "ABX9TyMfuxRDWF9mx2rgNQPgsOx1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -704,6 +704,125 @@
       "metadata": {
         "id": "7067uRrQ7TWr"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **L_8:** CASE\n",
+        "\n",
+        "it's like an if-then-else statement\n",
+        "\n",
+        "\n",
+        "```\n",
+        "CASE\n",
+        "    WHEN condition1 THEN result1\n",
+        "    WHEN condition2 THEN result2\n",
+        "    WHEN conditionN THEN resultN\n",
+        "    ELSE result\n",
+        "END AS New_Column_Name;\n",
+        "```\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qw6ul7rN8OP_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT A.id , O.total_amt_usd,\n",
+        "CASE WHEN total_amt_usd > 3000 THEN 'Large' \n",
+        "\t\t\tELSE 'Small'\n",
+        "            END \t\t\n",
+        "FROM accounts A\n",
+        "JOIN orders O ON A.id = O.account_id\n",
+        "LIMIT 10\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tBvqzXDF8OQI",
+        "outputId": "c129b8ae-06a4-4b85-b26e-035ebcbf31a3"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1001, 752.57, 'Small')\n",
+            "(1001, 773.63, 'Small')\n",
+            "(1001, 776.18, 'Small')\n",
+            "(1001, 878.56, 'Small')\n",
+            "(1001, 951.14, 'Small')\n",
+            "(1001, 958.24, 'Small')\n",
+            "(1001, 973.43, 'Small')\n",
+            "(1001, 983.49, 'Small')\n",
+            "(1001, 1067.25, 'Small')\n",
+            "(1001, 1182.61, 'Small')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SQL_code = '''\n",
+        "SELECT \n",
+        "CASE WHEN O.total_amt_usd > 200 THEN 'top'\n",
+        "     ELSE 'not'\n",
+        "     END as level_,\n",
+        "SR.name rep_name, SUM(O.total) num_of_orders\n",
+        "FROM orders O\n",
+        "\n",
+        "JOIN accounts A     ON o.account_id   = A.id\n",
+        "\n",
+        "JOIN sales_reps SR  ON A.sales_rep_id = SR.id\n",
+        "GROUP BY 1,2\n",
+        "ORDER BY 1 DESC\n",
+        "LIMIT 10\n",
+        "'''\n",
+        "\n",
+        "code_execution = db.execute(SQL_code)\n",
+        "\n",
+        "for row in code_execution:\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09126426-a11a-4ee8-a471-dad49f400c4e",
+        "id": "YlgjWzwtJ77F"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('top', 'Akilah Drinkard', 25220)\n",
+            "('top', 'Arica Stoltzfus', 122103)\n",
+            "('top', 'Ayesha Monica', 37942)\n",
+            "('top', 'Babette Soukup', 33827)\n",
+            "('top', 'Brandie Riva', 102295)\n",
+            "('top', 'Calvin Ollison', 91171)\n",
+            "('top', 'Cara Clarke', 27110)\n",
+            "('top', 'Carletta Kosinski', 33590)\n",
+            "('top', 'Charles Bidwell', 106620)\n",
+            "('top', 'Chau Rowles', 29952)\n"
+          ]
+        }
+      ]
     }
   ]
 }
