--- a/Unit_3_SQL_Aggregations_.ipynb
+++ b/Unit_3_SQL_Aggregations_.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Unit_3_SQL Aggregations .ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfuxRDWF9mx2rgNQPgsOx1",
+      "authorship_tag": "ABX9TyMMI6YVcqiY3fzI+dZSK3ve",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +36,7 @@
       "metadata": {
         "id": "N5R4p7i7ggyw"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -48,7 +47,7 @@
       "metadata": {
         "id": "xu4mBSeMYjSY"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +81,7 @@
         "id": "8dUSjqtAQuAR",
         "outputId": "c8b917c1-4084-4fe8-9331-d80497f39f2c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +121,7 @@
         "outputId": "8098318a-bd04-4c2f-becd-bea5043e07c6",
         "id": "yJd87uL-_LER"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +152,7 @@
         "outputId": "f4efdc10-3b9f-48a7-88a1-e9b929850590",
         "id": "p4VPJAgRA2_U"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +183,7 @@
         "outputId": "94b2009c-d6d5-40d5-b696-604559f0c46e",
         "id": "564VSgWHA-xc"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +226,7 @@
         "outputId": "99889228-4700-48d2-a891-d9c829bdba3a",
         "id": "EW0bmvBHBF6c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +272,7 @@
         "outputId": "1ae13d1e-2613-4804-edcc-6f0d8f37ff98",
         "id": "-9_IcccD9L7t"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,7 +345,7 @@
         "outputId": "103e023f-28bb-4c17-e9fb-bca033fd3965",
         "id": "am2LwdhZ7BxY"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +411,7 @@
         "outputId": "52faeb12-1dd3-4323-9395-7123c9af29a0",
         "id": "5gD8q6A5peak"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +461,7 @@
         "outputId": "183f5e17-b8ee-478e-c9f0-34c32d44010f",
         "id": "sGFyzvftpeal"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,7 +530,7 @@
         "outputId": "eae62618-15a6-4145-993c-9a8782582efe",
         "id": "kGDKcjvjrpYI"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +580,7 @@
         "outputId": "82b9d19d-42e4-402d-d52d-0914d4dab2c0",
         "id": "KxJusDdErpYJ"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +648,7 @@
       "metadata": {
         "id": "OSfMwSkaZNt5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -693,7 +692,7 @@
       "metadata": {
         "id": "kGah5v8_aNFF"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -710,7 +709,7 @@
       "source": [
         "# **L_8:** CASE\n",
         "\n",
-        "it's like an if-then-else statement\n",
+        "it's like an if-then-else statement, and it's treated as a normal column (EX: SELECT a.id, CASE .... , o.account_id || SELECT CASE .... , o.account_id, a.id || etc.)\n",
         "\n",
         "\n",
         "```\n",
@@ -753,7 +752,7 @@
         "id": "tBvqzXDF8OQI",
         "outputId": "c129b8ae-06a4-4b85-b26e-035ebcbf31a3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +803,7 @@
         "outputId": "09126426-a11a-4ee8-a471-dad49f400c4e",
         "id": "YlgjWzwtJ77F"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
