--- a/Unit_4_SQL_Subqueries_&_Temporary_Tables_.ipynb
+++ b/Unit_4_SQL_Subqueries_&_Temporary_Tables_.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Unit_4_SQL Subqueries & Temporary Tables .ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMpLpTyRkxPxWzzMnkjMNxQ",
+      "authorship_tag": "ABX9TyOjcphsrJF1fT3418xYi0ec",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +36,7 @@
       "metadata": {
         "id": "N5R4p7i7ggyw"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -48,7 +47,7 @@
       "metadata": {
         "id": "xu4mBSeMYjSY"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +81,7 @@
       "metadata": {
         "id": "8dUSjqtAQuAR"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +107,7 @@
       "metadata": {
         "id": "ue68qRrmlKaF"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +122,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#SELECT AVG(standard_qty) avg_standard_paper, AVG(gloss_qty) avg_gloss_paper, AVG(poster_qty) avg_poster_paper\n",
+        "#SELECT AVG(standard_qty) avg_standard_paper, AVG(gloss_qty) avg_gloss_paper, AVG(poster_qty) avg_poster_paper, SUM(total_amt_usd) AS total \n",
         "#FROM orders\n",
         "#WHERE DATE_TRUNC('month', occurred_at) = \n",
         "#     (SELECT DATE_TRUNC('month', MIN(occurred_at)) FROM orders)"
@@ -131,7 +130,7 @@
       "metadata": {
         "id": "m6K4QAOUqPf9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,9 +144,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "Z4N16rWeqYkG"
       },
